--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
 </head>
-<body class=" menu--open">
+<body>
     <section id="landing">
         <nav>
             <div class="row nav__row">
