--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/f8a13af68b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section id="landing">
