--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                              <div class="feature">
                     <div class="feature__row">
                         <figure class="feature__img--wrapper">
-                            <img src="Assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" 
+                            <img src="Assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" 
                             class="feature__img" alt="">
                         </figure>
                         <div class="feature__text">
-                            <h2 class="feature__title">Secure</h2>
+                            <h2 class="feature__title">24/7 Support</h2>
                             <p class="feature__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                         </div>
                     </div>
@@ -106,11 +106,11 @@
                              <div class="feature">
                     <div class="feature__row">
                         <figure class="feature__img--wrapper">
-                            <img src="Assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" 
+                            <img src="Assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" 
                             class="feature__img" alt="">
                         </figure>
                         <div class="feature__text">
-                            <h2 class="feature__title">Secure</h2>
+                            <h2 class="feature__title">Customizable</h2>
                             <p class="feature__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                     </div>
                 </div> 
@@ -118,11 +118,11 @@
                              <div class="feature">
                     <div class="feature__row">
                         <figure class="feature__img--wrapper">
-                            <img src="Assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" 
+                            <img src="Assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" 
                             class="feature__img" alt="">
                         </figure>
                         <div class="feature__text">
-                            <h2 class="feature__title">Secure</h2>
+                            <h2 class="feature__title">Reliable</h2>
                             <p class="feature__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                         </div>
                     </div>
@@ -130,11 +130,11 @@
                              <div class="feature">
                     <div class="feature__row">
                         <figure class="feature__img--wrapper">
-                            <img src="Assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" 
+                            <img src="Assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" 
                             class="feature__img" alt="">
                         </figure>
                         <div class="feature__text">
-                            <h2 class="feature__title">Secure</h2>
+                            <h2 class="feature__title">Fast</h2>
                             <p class="feature__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                         </div>
                     </div>
@@ -142,11 +142,11 @@
                              <div class="feature">
                     <div class="feature__row">
                         <figure class="feature__img--wrapper">
-                            <img src="Assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" 
+                            <img src="Assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" 
                             class="feature__img" alt="">
                         </figure>
                         <div class="feature__text">
-                            <h2 class="feature__title">Secure</h2>
+                            <h2 class="feature__title">Easy</h2>
                             <p class="feature__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
                         </div>
                     </div>
